--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins','Arial','monospace';
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: #41507e;
+  display: grid;
+  place-content: center;
+  height: 100vh;
+}
+h1{
+  color:#fff;
+  text-align: center;
+  font-size: 4em;
+  
+}
+body form input, button{
+  padding: .5em;
+  border-radius: 5px;
+  margin:.5em;
+}
+body form button{
+  cursor: pointer;
+}
+body button, input{
+  outline:none;
+  border:none;
+  font-size: 1em;
+  justify-content: center;
+}
+body button{
+  cursor: pointer;
+}
+body button:focus, input:focus{
+  outline:3px solid #4ba700;
+}
+body ul{
+  list-style-type: none;
+  color: #fff;
+  border-radius: 5px;
+  padding: .5em;
+  min-height: 5em;
+}
+body ul li{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+body ul li div{
+  color:white;
+}
+body ul li div input{
+  margin-right: .5em;
 }
